# gora

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  meson.build
docs/tokenizer/: identifier_dfa.dot  literals_character_dfa.dot  literals_numeric_dfa.dot  literals_string_dfa.dot  literals_symbol_dfa.dot
src/: fsm.c  fsm.h  gora_list.c  gora_list.h  lexer.c  lexer.h  main.c  parser.c  parser.h
src/lib/: list.c  list.h
tests/: CMakeLists.txt  dumb.c  fsm_tests.c  lexer_tests.c
